Add modern protocol catalog for 1.13–26.2.
Expand release/protocol mappings from public data, introduce protocol families, a compatibility registry, expanded capabilities, difference database, and semantic foundations. Legacy ≤1.12.2 is catalog-marked out of scope.

Co-authored-by: Cursor <cursoragent@cursor.com>